rnsc/test_data/integration/error/parser/type_hints/fieldref/no_operands_recovers.rns
.class   @fieldref
blabla ; <- should be still reported as an error
